--- a/haste.html
+++ b/haste.html
@@ -225,33 +225,38 @@
         </div>
       </section>
 
-      <!-- ═══ Full-width Spell Table ═══ -->
-      <section class="spells-table">
-        <div class="table-header">
-          <h2 class="table-title">DoT Breakpoint Analysis</h2>
-        </div>
-        <div class="spells-container" id="spellsContainer" role="region" aria-label="Spell breakpoints"></div>
-      </section>
+      <!-- ═══ Main Content Grid: DoT Table + WeakAura Side-by-Side ═══ -->
+      <div class="content-grid">
+        
+        <!-- Left: Spell Table -->
+        <section class="spells-table">
+          <div class="table-header">
+            <h2 class="table-title">DoT Breakpoint Analysis</h2>
+          </div>
+          <div class="spells-container" id="spellsContainer" role="region" aria-label="Spell breakpoints"></div>
+        </section>
 
-      <!-- ═══ WeakAura Banner (compact horizontal) ═══ -->
-      <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener" class="wa-banner">
-        <img src="https://media.wago.io/screenshots/7m5gdIAts/6967395d359f134f4939ccd7.gif" 
-             alt="Haste Breakpoints WeakAura" 
-             class="wa-banner-img">
-        <div class="wa-banner-body">
-          <span class="wa-banner-label">WeakAura</span>
-          <span class="wa-banner-name">Haste Breakpoints (T14, T15)</span>
-          <span class="wa-banner-desc">Track your DoT breakpoints in-game in real time</span>
-        </div>
-        <span class="wa-banner-cta">
-          Import
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/>
-            <polyline points="15 3 21 3 21 9"/>
-            <line x1="10" y1="14" x2="21" y2="3"/>
-          </svg>
-        </span>
-      </a>
+        <!-- Right: WeakAura Banner -->
+        <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener" class="wa-banner">
+          <img src="https://media.wago.io/screenshots/7m5gdIAts/6967395d359f134f4939ccd7.gif" 
+               alt="Haste Breakpoints WeakAura" 
+               class="wa-banner-img">
+          <div class="wa-banner-body">
+            <span class="wa-banner-label">WeakAura</span>
+            <span class="wa-banner-name">Haste Breakpoints (T14, T15)</span>
+            <span class="wa-banner-desc">Track your DoT breakpoints in-game in real time</span>
+          </div>
+          <span class="wa-banner-cta">
+            Import
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/>
+              <polyline points="15 3 21 3 21 9"/>
+              <line x1="10" y1="14" x2="21" y2="3"/>
+            </svg>
+          </span>
+        </a>
+
+      </div>
 
     </div>
   </div>
