--- a/haste.html
+++ b/haste.html
@@ -113,7 +113,7 @@
         <h1>Shadow Priest Haste Calculator</h1>
       </header>
 
-      <!-- ═══ Combined Controls + Result ═══ -->
+      <!-- ═══ Compact Controls Section ═══ -->
       <section class="haste-controls-section">
 
         <!-- Row 1: Input → Arrow → Result -->
@@ -151,7 +151,7 @@
         <!-- Divider -->
         <div class="controls-divider"></div>
 
-        <!-- Row 2: Race + Buffs (compact horizontal) -->
+        <!-- Row 2: Race + Buffs -->
         <div class="toggles-row">
 
           <!-- Race -->
@@ -225,10 +225,10 @@
         </div>
       </section>
 
-      <!-- ═══ Main Content Grid: DoT Table + WeakAura Side-by-Side ═══ -->
+      <!-- ═══ Main Content Grid: DoT Table + WeakAura ═══ -->
       <div class="content-grid">
         
-        <!-- Left: Spell Table -->
+        <!-- Left: DoT Table -->
         <section class="spells-table">
           <div class="table-header">
             <h2 class="table-title">DoT Breakpoint Analysis</h2>
