--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
        Zone 1 — Hero
        ════════════════════════════════════════════════════ -->
   <section class="hero">
-    <div class="hero-bg" aria-hidden="true">
-      <img src="img/hero-bg.jpg" alt="" loading="eager" fetchpriority="high" />
-    </div>
+    <div class="hero-bg" aria-hidden="true"></div>
     <div class="hero-overlay" aria-hidden="true"></div>
     <div class="hero-glow hero-glow--1" aria-hidden="true"></div>
     <div class="hero-glow hero-glow--2" aria-hidden="true"></div>
