--- a/sod.html
+++ b/sod.html
@@ -19,7 +19,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/base.css" />
-  <link rel="stylesheet" href="css/haste.css" />
+  <link rel="stylesheet" href="css/sod.css" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -242,7 +242,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="js/haste.js"></script>
+  <script src="js/sod.js"></script>
   <script src="js/nav.js"></script>
 
   <!-- WeakAura toggle -->
