--- a/sod.html
+++ b/sod.html
@@ -132,7 +132,7 @@
           <label class="toggle-chip">
             <input type="checkbox" id="goblinRacial" class="toggle-input">
             <span class="toggle-track" aria-hidden="true"></span>
-            <a href="https://www.wowhead.com/mop-classic/race=9/goblin" data-wowhead="race=9&domain=mop-classic" class="toggle-tooltip-wrap">
+            <a href="https://www.wowhead.com/mop-classic/spell=69042/time-is-money" data-wowhead="spell=69042&domain=mop-classic" class="toggle-tooltip-wrap">
               <img src="https://wow.zamimg.com/images/wow/icons/large/race_goblin_male.jpg" alt="" class="toggle-icon" aria-hidden="true">
             </a>
             <span class="toggle-label">Goblin</span>
@@ -180,7 +180,7 @@
           <label class="toggle-chip">
             <input type="checkbox" id="sinisterPrimal" class="toggle-input">
             <span class="toggle-track" aria-hidden="true"></span>
-            <a href="https://www.wowhead.com/mop-classic/item=76885/sinister-primal-diamond" data-wowhead="item=76885&domain=mop-classic" class="toggle-tooltip-wrap">
+            <a href="https://www.wowhead.com/mop-classic/item=95347/sinister-primal-diamond" data-wowhead="item=95347&domain=mop-classic" class="toggle-tooltip-wrap">
               <img src="https://wow.zamimg.com/images/wow/icons/large/inv_legendary_chimeraoffear.jpg" alt="" class="toggle-icon" aria-hidden="true">
             </a>
             <span class="toggle-label">Sinister</span>
@@ -200,7 +200,6 @@
       <!-- ═══ Collapsible WeakAura ═══ -->
       <div class="wa-section">
         <button class="wa-toggle" id="waToggle" aria-expanded="false" aria-controls="waPanel">
-          <div class="wa-accent-bar" aria-hidden="true"></div>
           <img
             src="https://wow.zamimg.com/images/wow/icons/large/spell_shadow_shadowwordpain.jpg"
             alt=""
