--- a/sod.html
+++ b/sod.html
@@ -207,7 +207,7 @@
             aria-hidden="true"
           >
           <div class="wa-toggle-text">
-            <span class="wa-toggle-title">DoT Tracker WeakAura</span>
+            <span class="wa-toggle-title">Haste Breakpoints WeakAura</span>
             <span class="wa-toggle-sub">Track breakpoints in-game</span>
           </div>
           <svg class="wa-chevron" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" aria-hidden="true">
@@ -226,9 +226,9 @@
             </a>
           </div>
           <div class="wa-info">
-            <h3 class="wa-info-title">Real-time DoT Tracking</h3>
+            <h3 class="wa-info-title">Haste Breakpoints Tracking</h3>
             <p class="wa-info-desc">
-              Shows current tick count, next breakpoint threshold, and progress for all three DoTs directly on your unit frames. Updates live as haste buffs proc.
+              Shows current tick count, next breakpoint threshold, and progress for all three DoTs directly on your unit frames.
             </p>
             <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener" class="wa-cta">
               Import from Wago.io
