--- a/sod.html
+++ b/sod.html
@@ -260,7 +260,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="js/haste.js"></script>
+  <script src="js/sod.js"></script>
   <script src="js/nav.js"></script>
 
   <!-- WeakAura toggle -->
