--- a/sod.html
+++ b/sod.html
@@ -208,12 +208,12 @@
 
       </section>
 
-      <!-- ═══ DoT Breakpoint Cards ═══ -->
-      <section class="spells-section">
-        <div class="section-bar">
-          <h2 class="section-title">DoT Breakpoint Analysis</h2>
+      <!-- ═══ DoT Breakpoint Table ═══ -->
+      <section class="spells-table">
+        <div class="table-header">
+          <h2 class="table-title">DoT Breakpoint Analysis</h2>
         </div>
-        <div id="spellsContainer" class="spell-cards" role="region" aria-label="Spell breakpoints"></div>
+        <div class="spells-container" id="spellsContainer" role="region" aria-label="Spell breakpoints"></div>
       </section>
 
       <!-- ═══ Collapsible WeakAura ═══ -->
