--- a/sod.html
+++ b/sod.html
@@ -34,68 +34,13 @@
     <div class="nav-container">
       <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">☰</button>
       <ul class="nav-links" id="navLinks">
-        <li>
-          <a href="/">
-            <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
-              <polyline points="9 22 9 12 15 12 15 22"/>
-            </svg>
-            Home
-          </a>
-        </li>
-        <li>
-          <a href="/rankings.html">
-            <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
-              <circle cx="8.5" cy="7" r="4"/>
-              <polyline points="17 11 19 13 23 9"/>
-            </svg>
-            Rankings
-          </a>
-        </li>
-        <li>
-          <a href="https://www.youtube.com/watch?v=LH5aODSFQ1o">
-            <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
-              <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
-            </svg>
-            Guide
-          </a>
-        </li>
-        <li>
-          <a href="/haste" class="active">
-            <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <circle cx="12" cy="12" r="10"/>
-              <polyline points="12 6 12 12 16 14"/>
-            </svg>
-            Haste Calculator
-          </a>
-        </li>
-        <li>
-          <a href="/addons">
-            <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-              <line x1="9" y1="3" x2="9" y2="21"/>
-            </svg>
-            Addons & WAs
-          </a>
-        </li>
-        <li>
-          <a href="http://youtube.com/@skimmynz" target="_blank" rel="noopener">
-            <svg class="nav-icon" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
-            </svg>
-            YouTube
-          </a>
-        </li>
-        <li>
-          <a href="https://twitch.tv/skimmynz" target="_blank" rel="noopener">
-            <svg class="nav-icon" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M11.571 4.714h1.715v5.143H11.57zm4.715 0H18v5.143h-1.714zM6 0L1.714 4.286v15.428h5.143V24l4.286-4.286h3.428L22.286 12V0zm14.571 11.143l-3.428 3.428h-3.429l-3 3v-3H6.857V1.714h13.714Z"/>
-            </svg>
-            Twitch
-          </a>
-        </li>
+        <li><a href="/"><svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>Home</a></li>
+        <li><a href="/rankings.html"><svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="8.5" cy="7" r="4"/><polyline points="17 11 19 13 23 9"/></svg>Rankings</a></li>
+        <li><a href="https://www.youtube.com/watch?v=LH5aODSFQ1o"><svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/></svg>Guide</a></li>
+        <li><a href="/haste" class="active"><svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>Haste Calculator</a></li>
+        <li><a href="/addons"><svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><line x1="9" y1="3" x2="9" y2="21"/></svg>Addons & WAs</a></li>
+        <li><a href="http://youtube.com/@skimmynz" target="_blank" rel="noopener"><svg class="nav-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>YouTube</a></li>
+        <li><a href="https://twitch.tv/skimmynz" target="_blank" rel="noopener"><svg class="nav-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M11.571 4.714h1.715v5.143H11.57zm4.715 0H18v5.143h-1.714zM6 0L1.714 4.286v15.428h5.143V24l4.286-4.286h3.428L22.286 12V0zm14.571 11.143l-3.428 3.428h-3.429l-3 3v-3H6.857V1.714h13.714Z"/></svg>Twitch</a></li>
       </ul>
     </div>
   </nav>
@@ -116,16 +61,16 @@
           <div class="controls-top-row">
             <div class="control-group rating-group">
               <h3 class="control-header">Haste Rating</h3>
-              <div class="input-wrap">
-                <input
-                  type="text"
-                  id="hasteInput"
-                  class="haste-input"
-                  placeholder="0"
-                  aria-label="Haste rating value"
-                />
-                <div class="gcd-overlay" id="gcdWarningInput"></div>
-              </div>
+              <input
+                type="text"
+                inputmode="numeric"
+                pattern="[0-9]*"
+                id="hasteInput"
+                class="haste-input"
+                placeholder="0"
+                aria-label="Haste rating value"
+              />
+              <div id="gcdWarningInput"></div>
             </div>
             <div class="control-group effective-group" aria-live="polite">
               <h3 class="control-header">Effective Haste</h3>
@@ -144,10 +89,7 @@
                 <a href="https://www.wowhead.com/mop-classic/spell=69042/time-is-money" data-wowhead="spell=69042&domain=mop-classic" class="buff-tooltip-wrap">
                   <img src="https://wow.zamimg.com/images/wow/icons/large/race_goblin_male.jpg" alt="" class="buff-icon" aria-hidden="true">
                 </a>
-                <div class="buff-info">
-                  <span class="buff-name">Goblin</span>
-                  <span class="buff-description">+1% passive haste</span>
-                </div>
+                <span class="buff-name">Goblin</span>
               </label>
               <label class="buff-toggle">
                 <input type="checkbox" id="trollRacial" class="race-checkbox buff-checkbox">
@@ -155,10 +97,7 @@
                 <a href="https://www.wowhead.com/mop-classic/spell=26297/berserking" data-wowhead="spell=26297&domain=mop-classic" class="buff-tooltip-wrap">
                   <img src="https://wow.zamimg.com/images/wow/icons/large/race_troll_male.jpg" alt="" class="buff-icon" aria-hidden="true">
                 </a>
-                <div class="buff-info">
-                  <span class="buff-name">Troll</span>
-                  <span class="buff-description">Berserking racial</span>
-                </div>
+                <span class="buff-name">Troll</span>
               </label>
             </div>
 
@@ -170,10 +109,7 @@
                 <a href="https://www.wowhead.com/mop-classic/spell=10060/power-infusion" data-wowhead="spell=10060&domain=mop-classic" class="buff-tooltip-wrap">
                   <img src="https://wow.zamimg.com/images/wow/icons/large/spell_holy_powerinfusion.jpg" alt="" class="buff-icon" aria-hidden="true">
                 </a>
-                <div class="buff-info">
-                  <span class="buff-name">Power Infusion</span>
-                  <span class="buff-description">+20% spell haste</span>
-                </div>
+                <span class="buff-name">Power Infusion</span>
               </label>
               <label class="buff-toggle" id="berserkingToggle" style="display: none;">
                 <input type="checkbox" id="berserking" class="buff-checkbox">
@@ -181,10 +117,7 @@
                 <a href="https://www.wowhead.com/mop-classic/spell=26297/berserking" data-wowhead="spell=26297&domain=mop-classic" class="buff-tooltip-wrap">
                   <img src="https://wow.zamimg.com/images/wow/icons/large/racial_troll_berserk.jpg" alt="" class="buff-icon" aria-hidden="true">
                 </a>
-                <div class="buff-info">
-                  <span class="buff-name">Berserking</span>
-                  <span class="buff-description">+20% spell haste</span>
-                </div>
+                <span class="buff-name">Berserking</span>
               </label>
               <label class="buff-toggle">
                 <input type="checkbox" id="bloodlust" class="buff-checkbox">
@@ -192,10 +125,7 @@
                 <a href="https://www.wowhead.com/mop-classic/spell=2825/bloodlust" data-wowhead="spell=2825&domain=mop-classic" class="buff-tooltip-wrap">
                   <img src="https://wow.zamimg.com/images/wow/icons/large/spell_nature_bloodlust.jpg" alt="" class="buff-icon" aria-hidden="true">
                 </a>
-                <div class="buff-info">
-                  <span class="buff-name">Bloodlust / Heroism</span>
-                  <span class="buff-description">+30% spell haste</span>
-                </div>
+                <span class="buff-name">Bloodlust / Heroism</span>
               </label>
               <label class="buff-toggle">
                 <input type="checkbox" id="sinisterPrimal" class="buff-checkbox">
@@ -203,10 +133,7 @@
                 <a href="https://www.wowhead.com/mop-classic/item=95347/sinister-primal-diamond" data-wowhead="item=95347&domain=mop-classic" class="buff-tooltip-wrap">
                   <img src="https://wow.zamimg.com/images/wow/icons/large/inv_legendary_chimeraoffear.jpg" alt="" class="buff-icon" aria-hidden="true">
                 </a>
-                <div class="buff-info">
-                  <span class="buff-name">Sinister Primal Diamond</span>
-                  <span class="buff-description">+30% spell haste proc</span>
-                </div>
+                <span class="buff-name">Sinister Primal Diamond</span>
               </label>
             </div>
           </div>
@@ -217,30 +144,24 @@
 
       </div>
 
-      <!-- ═══ Collapsible WeakAura ═══ -->
-      <div class="wa-section">
-        <button class="wa-toggle" id="waToggle" aria-expanded="false" aria-controls="waPanel">
-          <img src="https://wow.zamimg.com/images/wow/icons/large/spell_shadow_shadowwordpain.jpg" alt="" class="wa-toggle-icon" aria-hidden="true">
-          <div class="wa-toggle-text">
-            <span class="wa-toggle-title">Haste Breakpoints WeakAura</span>
-            <span class="wa-toggle-sub">Track breakpoints in-game</span>
-          </div>
-          <svg class="wa-chevron" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" aria-hidden="true">
-            <polyline points="6 9 12 15 18 9"/>
-          </svg>
-        </button>
-        <div class="wa-panel" id="waPanel">
-          <div class="wa-preview">
-            <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener" class="wa-preview-link">
-              <img src="https://media.wago.io/screenshots/7m5gdIAts/6967395d359f134f4939ccd7.gif" alt="Shadow Priest DoT Tracker WeakAura preview" class="wa-preview-img">
-            </a>
-          </div>
-          <div class="wa-info">
-            <h3 class="wa-info-title">Haste Breakpoints Tracking</h3>
-            <p class="wa-info-desc">Shows current tick count, next breakpoint threshold, and progress for all three DoTs directly on your unit frames.</p>
-            <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener" class="wa-cta">Import from Wago.io</a>
-          </div>
+      <!-- ═══ WeakAura ═══ -->
+      <div class="wa-card">
+        <div class="wa-preview">
+          <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener" class="wa-preview-link">
+            <img src="https://media.wago.io/screenshots/7m5gdIAts/6967395d359f134f4939ccd7.gif" alt="Shadow Priest DoT Tracker WeakAura preview" class="wa-preview-img">
+          </a>
         </div>
+        <div class="wa-info">
+          <h3 class="wa-info-title">Haste Breakpoints WeakAura</h3>
+          <p class="wa-info-desc">Track your current tick count, next breakpoint threshold, and progress for all three DoTs directly on your unit frames in-game.</p>
+          <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener" class="wa-cta">Import from Wago.io</a>
+        </div>
+      </div>
+
+      <!-- ═══ Info Section ═══ -->
+      <div class="info-card">
+        <h3 class="info-title">What are Haste Breakpoints?</h3>
+        <p class="info-text">In Mists of Pandaria Classic, a Haste Breakpoint for a Shadow Priest refers to a specific amount of Haste rating at which your damage-over-time (DoT) spells gain an extra tick during their duration. DoTs like Shadow Word: Pain, Vampiric Touch, and Devouring Plague tick at fixed intervals, but Haste shortens these intervals. When you reach certain thresholds, the game adds an additional tick before the DoT expires, which is a significant DPS increase.</p>
       </div>
 
     </div>
@@ -248,16 +169,5 @@
 
   <script src="js/sod.js"></script>
   <script src="js/nav.js"></script>
-  <script>
-    (function() {
-      var btn = document.getElementById('waToggle');
-      var panel = document.getElementById('waPanel');
-      btn.addEventListener('click', function() {
-        var open = panel.classList.toggle('wa-panel--open');
-        btn.setAttribute('aria-expanded', open);
-        btn.classList.toggle('wa-toggle--open', open);
-      });
-    })();
-  </script>
 </body>
 </html>
